working on descriptions

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -33,6 +33,8 @@
 
 \usepackage[nopostdot,style=super,nonumberlist,toc, automake]{glossaries}
 \makeglossaries
+\renewcommand{\glossarysection}[2][]{}
+
 
 \setacronymstyle{long-short}
 \input{main/glossary} % input definitions
