--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -550,6 +550,7 @@ Bla bla bla...
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/liningUp_sequence_diagram.pdf}
 	\caption{Lining Up sequence diagram.}
+	\label{figure:liningUpSequenceDiagram}
 \end{figure}
 
 \begin{figure}[H]
