--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -2,3 +2,4 @@
 \newacronym{clup}{CLup}{Customers Line-up}
 \newacronym{dpcm}{d.P.C.m}{\textit{"decreto del Presidente del Consiglio dei ministri"}}
 \newacronym{gps}{GPS}{Global Positioning System}
+\newacronym{fifo}{FIFO}{First In First Out}
