--- a/RASD/main/glossary.tex
+++ b/RASD/main/glossary.tex
@@ -3,3 +3,4 @@
 \newacronym{dpcm}{d.P.C.m}{\textit{"decreto del Presidente del Consiglio dei ministri"}}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{fifo}{FIFO}{First In First Out}
+\newacronym{api}{API}{Application Programming Interface}
