work in progress on enumeration of requirements and domain assumptions

--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -11,22 +11,19 @@ We identified the following goals:
 \begin{itemize}
 
 	\item {\textbf{[G1]}}: Keep customers in safe condition w.r.t the \gls{dpcm} in force inside the store.
-	
-	% \item {\textbf{[G1]}}: Keep customers in safe condition w.r.t the \gls{dpcm} in force in the square outside the store.
 		
-	\item {\textbf{[G2]}}: Allow customers to line up from a remote device.
+	\item {\textbf{[G2]}}: Limit the physical line situation in the proximity
+of the store.
 		
-	\item {\textbf{[G3]}}: Allow store manager to monitor entrances.
+	\item {\textbf{[G3]}}: Allow customers to line up from a remote device.
 	
-	\item {\textbf{[G4]}}: Provide estimation of the waiting time.
+	\item {\textbf{[G4]}}: Allow store manager to monitor entrances.
 	
-	\item {\textbf{[G5]}}: Notify customers that their turn is coming.
+	\item {\textbf{[G5]}}: Allow customers to line up from a physical spot.
 	
-	\item {\textbf{[G6]}}: Allow customers to line up from a physical spot.
+	\item {\textbf{[G6]}}: Allow customers to book a visit from a remote
+device.
 
-	\item {\textbf{[G7]}}: Allow customers to book a visit from a remote device.
-
-	% \item {\textbf{[G8]}}: Infer customers visits duration.
 	
 \end{itemize}
 
