domain assumptions and requirements enumeration

--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -12,8 +12,7 @@ We identified the following goals:
 
 	\item {\textbf{[G1]}}: Keep customers in safe condition w.r.t the \gls{dpcm} in force inside the store.
 		
-	\item {\textbf{[G2]}}: Limit the physical line situation in the proximity
-of the store.
+	\item {\textbf{[G2]}}: Limit the physical line situation in the proximity of the store.
 		
 	\item {\textbf{[G3]}}: Allow customers to line up from a remote device.
 	
