--- a/RASD/main/OverallDescription.tex
+++ b/RASD/main/OverallDescription.tex
@@ -49,20 +49,24 @@ To do that, the application provides a different home page, if you are logged in
 
 \section{Assumptions, Dependencies and Constraints}
 
-Below is reported the list of our domain assumptions.
+Below has been reported the list of our domain assumptions.
 
 \begin{itemize}
 
-	\item {[D1]}: Customers respect the \gls{dpcm} impositions.
-	\item {[D2]}: If customers have lined up from remote, they shall approach to the store with the smartphone.
-	\item {[D3]}: If customers indicate the category of products they would buy, they won't buy other things.
-	\item {[D4]}: Customers lining up remotely shall have a \gls{gps} module inside the smartphone.
-	\item {[D5]}: Customers lining up remotely shall accept \gls{gps} localization permissions.
-	\item {[D6]}: Customers lining up remotely shall keep Internet connection active.
-	\item {[D7]}: Customers lining up remotely shall keep notification option active.
-	\item {[D8]}: Customers enter in the store only if the system authorized them.
-	\item {[D9]}: Customers go away from the store after they have done their shopping.
-	\item {[D10]}: Customers lining up from the physical spot take care about the printed QR code.
-	\item {[D11]}: Customers show the QR code to the scanner to be accepted by the system.
+	\item \textbf{{[D1]}}: There is a \gls{dpcm} in force.
+	\item \textbf{{[D2]}}: Customers follow the rules impsed by the \gls{dpcm} in force.
+	\item \textbf{{[D3]}}: Customers enter in the store only if the system authorizes them.
+	\item \textbf{{[D4]}}: Customers don't stay in the shop longer than necessary and they go away from the sotre after they have done their shopping.
+	\item \textbf{{[D5]}}: Customers line up physically only if they have a valid (non expired) QR code.
+	\item \textbf{{[D6]}}: Outside the store there is space to queue.
+	\item \textbf{{[D7]}}: Customers have a smartphone.
+	\item \textbf{{[D8]}}: Customers have installed the \gls{clup} application.
+	\item \textbf{{[D9]}}: Customers allow the permissions requested by the application.
+	\item \textbf{{[D10]}}: Customers keep Internet connection active.
+	\item \textbf{{[D11]}}: There is a store manager present in the store.
+	\item \textbf{{[D12]}}: Store managers allow the permissions requested by the application.
+	\item \textbf{{[D13]}}: Store managers keep Internet connection active.
+	\item \textbf{{[D14]}}: Physical spots are powered on every working day.
+	\item \textbf{{[D15]}}: Physical spots are refilled when asked by the system.
 
 \end{itemize}
