--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -140,7 +140,7 @@ Bla bla bla...
 		\begin{itemize}
 			\item {\textbf{[D5]}}: Customers line up physically only if they have a valid (non expired) QR code.
 			\item {\textbf{[D4]}}: Customers don't stay in the shop longer than necessary and they go away from the store after they have done their shopping.
-			\item {\textbf{[D6]}}: Outside the store, there is space to queue.
+			\item {\textbf{[D6]}}: Outside the store there is space to queue.
 		\end{itemize} \\ 
 	\hline
 \end{tabular}
@@ -156,28 +156,28 @@ Bla bla bla...
 	\hline
 	\textbf{Requirements} &
 		\begin{itemize}
-			\item {\textbf{[R]}}: The system has to allow customers to register to the application.
-			\item {\textbf{[R]}}: The system has to allow customers to login to the application.
-			\item {\textbf{[R]}}: The system has to allow customers to get a QR code from the application.
-			\item {\textbf{[R]}}: The system has to release QR codes to the customers through the application.
-			\item {\textbf{[R]}}: The system has to alert customers if the queue is full.
-			\item {\textbf{[R]}}: The system has to encode the lining up number in the QR code.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the QR code from the application.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the lining up number encoded in the QR code.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the remaining time to be authorized to enter in the store.
-			\item {\textbf{[R]}}: The system has to update the remaining time showed to the customers.
-			\item {\textbf{[R]}}: The system has to allow customers to delete a lining up operation.
-			\item {\textbf{[R]}}: The system has to notify customers about the validation status of the QR code.
-			\item {\textbf{[R]}}: The system has to check if customers have Internet connection active.
-			\item {\textbf{[R]}}: The system has to check if customers have allowed the permissions requested by the application.
+			\item {\textbf{[R17]}}: The system has to allow customers to register to the application.
+			\item {\textbf{[R18]}}: The system has to allow customers to login to the application.
+			\item {\textbf{[R19]}}: The system has to allow customers to get a QR code from the application.
+			\item {\textbf{[R20]}}: The system has to release QR codes to the customers through the application.
+			\item {\textbf{[R21]}}: The system has to alert customers if the queue is full.
+			\item {\textbf{[R22]}}: The system has to encode the lining up number in the QR code.
+			\item {\textbf{[R23]}}: The system has to allow customers to watch the QR code from the application.
+			\item {\textbf{[R24]}}: The system has to allow customers to watch the lining up number encoded in the QR code.
+			\item {\textbf{[R25]}}: The system has to allow customers to watch the remaining time to be authorized to enter in the store.
+			\item {\textbf{[R26]}}: The system has to update the remaining time showed to the customers.
+			\item {\textbf{[R27]}}: The system has to allow customers to delete a lining up operation.
+			\item {\textbf{[R28]}}: The system has to notify customers about the validation status of the QR code.
+			\item {\textbf{[R29]}}: The system has to check if customers have Internet connection active.
+			\item {\textbf{[R30]}}: The system has to check if customers have allowed the permissions requested by the application.
 		\end{itemize} \\ 
 	\hline
 	\shortstack[l]{\textbf{Domain} \\ \textbf{Assumptions}} & 
 		\begin{itemize}
-			\item {\textbf{[D]}}: Customers have a smartphone.
-			\item {\textbf{[D]}}: Customers have installed the \gls{clup} application.
-			\item {\textbf{[D]}}: Customers allow the permissions requested by the application.
-			\item {\textbf{[D]}}: Customers keep Internet connection active.
+			\item {\textbf{[D7]}}: Customers have a smartphone.
+			\item {\textbf{[D8]}}: Customers have installed the \gls{clup} application.
+			\item {\textbf{[D9]}}: Customers allow the permissions requested by the application.
+			\item {\textbf{[D10]}}: Customers keep Internet connection active.
 		\end{itemize} \\ 
 	\hline
 \end{tabular}
@@ -192,22 +192,22 @@ Bla bla bla...
 	\hline
 	\textbf{Requirements} &
 		\begin{itemize}
-			\item {\textbf{[R]}}: The system has to register store managers in the application.
-			\item {\textbf{[R]}}: The system has to allow store managers to login to the application.
-			\item {\textbf{[R]}}: The system has to allow store managers to monitor the status of the queue.
-			\item {\textbf{[R]}}: The system has to allow store managers to limit the number of QR codes released.
-			\item {\textbf{[R]}}: The system has to allow store managers to monitor the number of customers inside the store.
-			\item {\textbf{[R]}}: The system has to scan the QR codes of the customers.
-			\item {\textbf{[R]}}: The system has to allow store managers to modify the timing parameters of the scheduler.
-			\item {\textbf{[R]}}: The system has to check if store managers have Internet connection active.
-			\item {\textbf{[R]}}: The system has to check if store managers have allowed the permissions requested by the application.
+			\item {\textbf{[R31]}}: The system has to register store managers in the application.
+			\item {\textbf{[R32]}}: The system has to allow store managers to login to the application.
+			\item {\textbf{[R33]}}: The system has to allow store managers to monitor the status of the queue.
+			\item {\textbf{[R34]}}: The system has to allow store managers to limit the number of QR codes released.
+			\item {\textbf{[R35]}}: The system has to allow store managers to monitor the number of customers inside the store.
+			\item {\textbf{[R36]}}: The system has to scan the QR codes of the customers.
+			\item {\textbf{[R37]}}: The system has to allow store managers to modify the timing parameters of the scheduler.
+			\item {\textbf{[R38]}}: The system has to check if store managers have Internet connection active.
+			\item {\textbf{[R39]}}: The system has to check if store managers have allowed the permissions requested by the application.
 		\end{itemize} \\ 
 	\hline
 	\shortstack[l]{\textbf{Domain} \\ \textbf{Assumptions}} & 
 		\begin{itemize}
-			\item {\textbf{[D]}}: There is a store manager present in the store.
-			\item {\textbf{[D]}}: Store managers allow the permissions requested by the application.
-			\item {\textbf{[D]}}: Store managers keep Internet connection active.
+			\item {\textbf{[D11]}}: There is a store manager present in the store.
+			\item {\textbf{[D12]}}: Store managers allow the permissions requested by the application.
+			\item {\textbf{[D13]}}: Store managers keep Internet connection active.
 		\end{itemize} \\ 
 	\hline
 \end{tabular}
@@ -222,19 +222,19 @@ Bla bla bla...
 	\hline
 	\textbf{Requirements} &
 		\begin{itemize}
-			\item {\textbf{[R]}}: The system has to allow unregistered customers to line up.
-			\item {\textbf{[R]}}: The system has to allow customers to get a QR code from a physical spot.
-			\item {\textbf{[R]}}: The system has to release QR codes to the customers through the physical spot.
-			\item {\textbf{[R]}}: The system has to encode the lining up number in the QR code.
-			\item {\textbf{[R]}}: The system has to print QR codes on a paper tickets.
-			\item {\textbf{[R]}}: The system has to alert customers if the queue is full.
-			\item {\textbf{[R]}}: The system has to alert when the paper and toner of the physical spot is going to finish.
+			\item {\textbf{[R40]}}: The system has to allow unregistered customers to line up.
+			\item {\textbf{[R41]}}: The system has to allow customers to get a QR code from a physical spot.
+			\item {\textbf{[R42]}}: The system has to release QR codes to the customers through the physical spot.
+			\item {\textbf{[R43]}}: The system has to encode the lining up number in the QR code.
+			\item {\textbf{[R44]}}: The system has to print QR codes on a paper tickets.
+			\item {\textbf{[R45]}}: The system has to alert customers if the queue is full.
+			\item {\textbf{[R46]}}: The system has to alert when the paper and toner of the physical spot is going to finish.
 		\end{itemize} \\ 
 	\hline
 	\shortstack[l]{\textbf{Domain} \\ \textbf{Assumptions}} & 
 		\begin{itemize}
-			\item {\textbf{[D]}}: Physical spots are powered on every working day.
-			\item {\textbf{[D]}}: Physical spots are refilled when asked by the system. 
+			\item {\textbf{[D14]}}: Physical spots are powered on every working day.
+			\item {\textbf{[D15]}}: Physical spots are refilled when asked by the system. 
 		\end{itemize} \\ 
 	\hline
 \end{tabular}
@@ -250,29 +250,29 @@ Bla bla bla...
 	\hline
 	\textbf{Requirements} &
 		\begin{itemize}
-			\item {\textbf{[R]}}: The system has to allow customers to register to the application.
-			\item {\textbf{[R]}}: The system has to allow customers to login to the application.
-			\item {\textbf{[R]}}: The system has to allow customers to get a QR code from the application.
-			\item {\textbf{[R]}}: The system has to allow customers to specify the date and time for a visit to the store.
-			\item {\textbf{[R]}}: The system has to allow customers to specify the category of grocery they want to buy.
-			\item {\textbf{[R]}}: The system has to release QR codes to the customers through the application.
-			\item {\textbf{[R]}}: The system has to alert customers if the queue is full.
-			\item {\textbf{[R]}}: The system has to encode the book-a-visit number in the QR code.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the QR code from the application.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the book-a-visit number encoded in the QR code.
-			\item {\textbf{[R]}}: The system has to allow customers to watch the remaining time to be authorized to enter in the store.
-			\item {\textbf{[R]}}: The system has to allow customers to delete a book-a-visit operation.
-			\item {\textbf{[R]}}: The system has to notify customers about the validation status of the QR code.
-			\item {\textbf{[R]}}: The system has to check if customers have Internet connection active.
-			\item {\textbf{[R]}}: The system has to check if customers have allowed the permissions requested by the application.
+			\item {\textbf{[R17]}}: The system has to allow customers to register to the application.
+			\item {\textbf{[R18]}}: The system has to allow customers to login to the application.
+			\item {\textbf{[R19]}}: The system has to allow customers to get a QR code from the application.
+			\item {\textbf{[R47]}}: The system has to allow customers to specify the date and time for a visit to the store.
+			\item {\textbf{[R48]}}: The system has to allow customers to specify the category of grocery they want to buy.
+			\item {\textbf{[R20]}}: The system has to release QR codes to the customers through the application.
+			\item {\textbf{[R21]}}: The system has to alert customers if the queue is full.
+			\item {\textbf{[R49]}}: The system has to encode the book-a-visit number in the QR code.
+			\item {\textbf{[R23]}}: The system has to allow customers to watch the QR code from the application.
+			\item {\textbf{[R50]}}: The system has to allow customers to watch the book-a-visit number encoded in the QR code.
+			\item {\textbf{[R25]}}: The system has to allow customers to watch the remaining time to be authorized to enter in the store.
+			\item {\textbf{[R51]}}: The system has to allow customers to delete a book-a-visit operation.
+			\item {\textbf{[R28]}}: The system has to notify customers about the validation status of the QR code.
+			\item {\textbf{[R29]}}: The system has to check if customers have Internet connection active.
+			\item {\textbf{[R30]}}: The system has to check if customers have allowed the permissions requested by the application.
 		\end{itemize} \\ 
 	\hline
 	\shortstack[l]{\textbf{Domain} \\ \textbf{Assumptions}} & 
 		\begin{itemize}
-			\item {\textbf{[D]}}: Customers have a smartphone.
-			\item {\textbf{[D]}}: Customers have installed the \gls{clup} application.
-			\item {\textbf{[D]}}: Customers allow the permissions requested by the application.
-			\item {\textbf{[D]}}: Customers keep Internet connection active.
+			\item {\textbf{[D7]}}: Customers have a smartphone.
+			\item {\textbf{[D8]}}: Customers have installed the \gls{clup} application.
+			\item {\textbf{[D9]}}: Customers allow the permissions requested by the application.
+			\item {\textbf{[D10]}}: Customers keep Internet connection active.
 		\end{itemize} \\ 
 	\hline
 \end{tabular}
