new sequence diagram

--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -622,6 +622,12 @@ Bla bla bla...
 	\caption{Show Stats sequence diagram.}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/authorizationToEnter_sequence_diagram.pdf}
+	\caption{Sequence diagram reporting the activity periodically performed in background, by the application of the store manager, to authorize customers to enter in the store. For simplicity, the session authentication has been omitted.}
+\end{figure}
+
 \subsection{Mapping on Requirements}
 
 \section{Performance Requirements}
