--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -11,8 +11,8 @@ At the launch of the application the user has to insert the credentials in the L
 % screenshots here
 \begin{figure}[H]
 	\centering     %%% not \center
-	\subfigure[Log In page.]{\label{fig:LogInMockup}\includegraphics[width=0.4\textwidth]{images/log_in.png}}
-	\subfigure[Sign Up page.]{\label{fig:SignUpMockup}\includegraphics[width=0.4\textwidth]{images/sign_up.png}}
+	\subfigure[Log In page.]{\label{fig:LogInMockup}\includegraphics[width=0.3\textwidth]{images/log_in.png}}
+	\subfigure[Sign Up page.]{\label{fig:SignUpMockup}\includegraphics[width=0.3\textwidth]{images/sign_up.png}}
 	\caption{Example of Log In and Sign Up pages.}
 \end{figure}
 
@@ -21,7 +21,7 @@ In particular, the reported figure shows the Home page for the customer account 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.35\textwidth]{images/home.png}
+	\includegraphics[width=0.3\textwidth]{images/home.png}
 	\caption{Home page.}
 	\label{fig:HomeMockup}
 \end{figure}
@@ -31,11 +31,11 @@ In the mock-up we show how the user can choose the store, the time slot and, in 
 
 \begin{figure}[H]
 	\centering     %%% not \center
-	\subfigure[Lining Up page.]{\label{fig:LiningUpMockup}\includegraphics[width=0.4\textwidth]{images/lining_up_01.png}}
-	\subfigure[Booking Visit page.]{\label{fig:BookingVisitMockup}\includegraphics[width=0.4\textwidth]{images/booking_visit_01.png}}
+	\subfigure[Lining Up page.]{\label{fig:LiningUpMockup}\includegraphics[width=0.3\textwidth]{images/lining_up_01.png}}
+	\subfigure[Booking Visit page.]{\label{fig:BookingVisitMockup}\includegraphics[width=0.3\textwidth]{images/booking_visit_01.png}}
 	
-	\subfigure[Lining Up page with expanded spinner.]{\label{fig:LiningUp2Mockup}\includegraphics[width=0.4\textwidth]{images/lining_up_02.png}}
-	\subfigure[Booking Visit page with expanded spinner.]{\label{fig:BookingVisit2Mockup}\includegraphics[width=0.4\textwidth]{images/booking_visit_02.png}}
+	\subfigure[Lining Up page with expanded spinner.]{\label{fig:LiningUp2Mockup}\includegraphics[width=0.3\textwidth]{images/lining_up_02.png}}
+	\subfigure[Booking Visit page with expanded spinner.]{\label{fig:BookingVisit2Mockup}\includegraphics[width=0.3\textwidth]{images/booking_visit_02.png}}
 	\caption{Example of Lining Up and Booking Visit pages.}
 	\label{fig:LiningBookingMockup}
 \end{figure}
@@ -46,12 +46,21 @@ If visible, the users will be able to see the interfaces: \ref{fig:GetStatusMock
 
 \begin{figure}[H]
 	\centering     %%% not \center
-	\subfigure[Get Status page.]{\label{fig:GetStatusMockup}\includegraphics[width=0.4\textwidth]{images/get_status.png}}
-	\subfigure[Show QR code page.]{\label{fig:ShowQRMockup}\includegraphics[width=0.4\textwidth]{images/show_qr_code.png}}
+	\subfigure[Get Status page.]{\label{fig:GetStatusMockup}\includegraphics[width=0.3\textwidth]{images/get_status.png}}
+	\subfigure[Show QR code page.]{\label{fig:ShowQRMockup}\includegraphics[width=0.3\textwidth]{images/show_qr_code.png}}
 	\caption{Example of Get Status and Show QR code pages.}
 \end{figure}
 
-% TODO: add mokup for store manager
+In figure~\ref{fig:ShowStatsMockup} has been reported a mockup showing a possible interface for the store manager to control the statistics about the status of the queue, instead,
+in figure~\ref{fig:ControlQueueMockup} a page to control the parameters of the algorithm that schedules users and releases QR codes.
+
+
+\begin{figure}[H]
+	\centering     %%% not \center
+	\subfigure[Show Stats page.]{\label{fig:ShowStatsMockup}\includegraphics[width=0.3\textwidth]{images/show_stats.png}}
+	\subfigure[Control Queue page.]{\label{fig:ControlQueueMockup}\includegraphics[width=0.3\textwidth]{images/control_queue.png}}
+	\caption{Example of Show Stats and Control Queue pages.}
+\end{figure}
 
 \subsection{Hardware Interfaces}
 
