DD ready to go!

--- a/RASD/main/Introduction.tex
+++ b/RASD/main/Introduction.tex
@@ -43,7 +43,7 @@ device.
   Ticket & a piece of paper or a virtual card given to customers to show that they have performed a lining up or a booking a visit operation.\\ \\
   QR code & a matrix composed by white and black squares encoding a string. It is reported on the ticket.\\ \\
   System & we use this term to represent the entire service, composed by smartphone application and servers.\\ \\
-  Application & program executable on smartphones.
+  Application & program executable on smartphone.
 \end{tabularx}
 
 \subsection{Acronyms and Abbreviations}
