--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -2,6 +2,12 @@
 
 \section{Overview}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/architecture.pdf}
+	\caption{System architecture.}
+\end{figure}
+
 \section{Component View}
 
 \section{Deployment View}
@@ -11,5 +17,11 @@
 \section{Component Interfaces}
 
 \section{Selected Architectural Styles and Patterns}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/architecture_components.pdf}
+	\caption{Architecture components.}
+\end{figure}
 
 \section{Other Design Decisions}
