--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -10,6 +10,12 @@
 
 \section{Component View}
 
+\begin{sidewaysfigure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/component_diagram.pdf}
+	\caption{Component Diagram.}
+\end{sidewaysfigure}
+
 \section{Deployment View}
 
 \section{Runtime View}
@@ -18,10 +24,10 @@
 
 \section{Selected Architectural Styles and Patterns}
 
-\begin{figure}[H]
+\begin{figure}[H] % \begin{sidewaysfigure}
 	\centering
 	\includegraphics[width=1.0\textwidth]{images/architecture_components.pdf}
 	\caption{Architecture components.}
-\end{figure}
+\end{figure} % \end{sidewaysfigure}
 
 \section{Other Design Decisions}
