--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -27,6 +27,8 @@
 
 \usepackage{lipsum} % Consente di inserire testo fittizio all'interno della tesi. Inutile in fase di scrittura della tesi. Eliminare questa dicitura e tutte le diciture \lorem all'interno del testo.
 
+\usepackage{rotating} % to rotate images
+
 
 \usepackage{lineno}
 \modulolinenumbers[1]
