--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -20,6 +20,12 @@
 
 \section{Runtime View}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/signUp_sequence_diagram.pdf}
+	\caption{Sign Up sequence diagram.}
+\end{figure}
+
 \section{Component Interfaces}
 
 \section{Selected Architectural Styles and Patterns}
